tests/ui/parser/issues/issue-100197-mut-let.stderr
error: invalid variable declaration
  --> $DIR/issue-100197-mut-let.rs:4:5
   |
LL |     mut let _x = 123;
   |     ^^^^^^^
   |
help: switch the order of `mut` and `let`
   |
LL -     mut let _x = 123;
LL +     let mut _x = 123;
   |

error: aborting due to 1 previous error

