tests/ui/parser/issues/issue-100197-mut-let.rs
//@ run-rustfix

fn main() {
    mut let _x = 123;
    //~^ ERROR invalid variable declaration
}
